# discord-ai-bot

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yaml
src/: ai.rs  command_handler.rs  conversation.rs  helper.rs  knowledge_base.rs  main.rs  msg_handler.rs
