[package]
edition = "2021"
name    = "discord-ai-bot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing            = "0.1.35"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
async-openai       = "0.8.0"

serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "native_tls_backend", "model", "cache"] }
tokio    = { version = "1", features = ["full"] }
openssl  = { version = "0.10.32", features = ["vendored"]}
tracing-appender = "0.2.2"
anyhow = "1.0.69"
thiserror = "1.0.38"
lru = "0.9.0"
qdrant-client = "1.0.0"
structopt = "0.3.26"
