[package]
edition = "2021"
name    = "discord-ai-bot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai       = "0.8.0"
tracing            = "0.1.35"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

anyhow = "1.0.69"
log-error = "0.1.1"
lru = "0.9.0"
openssl = { version = "0.10.32", features = ["vendored"] }
qdrant-client = "1.0.0"
serde = "1.0.152"
serde_json = "1.0.93"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "native_tls_backend",
    "model",
    "cache",
] }
structopt = "0.3.26"
thiserror = "1.0.38"
tiktoken-rs = "0.1.4"
tokio = { version = "1", features = ["full"] }
tracing-appender = "0.2.2"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
